--- a/client/views/list.html
+++ b/client/views/list.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<div class="quote-box" ng-repeat="quote in quotes | orderBy: '-createdAt'">
+			<div class="quote-box" ng-repeat="quote in model.quotes | orderBy: '-createdAt'">
 				<div class="quote-content">{{quote.content}}</div>
 				<div class="quote-date">{{quote.createdAt | date: short}}</div>
 			</div>
